#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/bazel/rules:node.bzl", "node_native_module")

node_native_module(
    name = "larkin_node_addon",
    srcs = [
        "module.cc"
    ],
    deps = [
        ":larkin_node_addon_lib",
        "//third_party/node/get_uv_event_loop:uv_event_loop_node_lib",
    ],
    strip_include_prefix = "//v11",
    copts = [
        "-std=c++17",
        "-ansi",
        #"-pedantic",
    ] + select({
        "//tools/bazel/platforms:macos": [
            "-ObjC++",
            "-stdlib=libc++",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "larkin_node_addon_lib",
    hdrs = [
        "accessibility.h",
        "environment.h",
        "interaction.h",
        "sound_utils.h",
        "utils.h",
    ],
    srcs = [
        "accessibility.cc",
        "environment.cc",
        "interaction.cc",
        "sound_utils.cc",
        "utils.cc",
    ],
    deps = [
        "//v11/utils:v11_utils_main_loop_lib",
        "//v11/larkin/accessibility:larkin_accessibility_lib",
        "//v11/larkin/environment/system:larkin_sys_lib",
        "//v11/larkin/environment/application:larkin_application_lib",
        "//v11/larkin/interaction/sound:larkin_sound_lib",
        "//v11/larkin/interaction/keyboard:larkin_keyboard_lib",
    ],
    includes = [
        # TODO(tommymchugh): See if /usr/include is needed
        # "/usr/include"
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:private"],
)
