#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cross_cc_library(
    name = "sys_notifications_lib",
    hdrs = [
        "notification.h",
        "notification_builder.h",
        "notification_data_builder.h",
        "notification_manager.h",
        "notification_manager_builder.h",
        "input_source.h",
        "input_source_base.h",
        "system_notification_manager.h",
    ],
    srcs = [
        "input_source_base.cc",
        "notification_builder.cc",
        "notification_data_builder.cc",
        "notification_manager_builder.cc",
        "system_notification_manager.cc",
    ],
#    macos_srcs = [
#        ":sys_notifications_lib_macos_srcs",
#    ],
#    linux_srcs = [
#        ":sys_notifications_lib_linux_srcs",
#    ],
#    windows_srcs = [
#        ":sys_notifications_lib_windows_srcs",
#    ],
    deps = [
        "@abseil_cpp//absl/container:flat_hash_map",
        "@abseil_cpp//absl/container:flat_hash_set",
        "//v11/utils:v11_utils_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core System Notifications Lib Linux Platform Resources

filegroup(
    name = "sys_notifications_lib_linux_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib MacOS Platform Resources

filegroup(
    name = "sys_notifications_lib_macos_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib Windows Platform Resources

filegroup(
    name = "sys_notifications_lib_windows_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)
