#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cc_library(
    name = "sys_notifications_base_lib",
    hdrs = [
        "system_notification.h",
        "notification.h",
        "notification_builder.h",
        "notification_builder_inl.h",
        "notification_data_builder.h",
    ],
    srcs = [
        "notification_data_builder.cc",
    ],
    deps = [
        "@abseil_cpp//absl/container:flat_hash_map",
        "@abseil_cpp//absl/container:flat_hash_set",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sys_notifications_input_source_base_lib",
    hdrs = [
        "input_source.h",
        "input_source_inl.h",
        "input_source_base.h",
        "input_source_base_inl.h",
    ],
    deps = [
        ":sys_notifications_base_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sys_notifications_manager_base_lib",
    hdrs = [
        "notification_manager.h",
        "notification_manager_base.h",
        "notification_manager_base_inl.h",
        "notification_manager_builder.h",
        "notification_manager_builder_inl.h",
        "system_notification_manager.h",
    ],
    srcs = [
        "system_notification_manager.cc",
    ],
    deps = [
        ":sys_notifications_base_lib",
        ":sys_notifications_input_source_base_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sys_notifications_lib_mock",
    hdrs = [
        "input_source_mock.h",
    ],
    srcs = [
        "input_source_mock.cc",
    ],
    deps = [
        ":sys_notifications_input_source_base_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:private"],
)

cc_test(
    name = "sys_notifications_lib_test",
    srcs = [
        "input_source_test.cc",
    ],
    deps = [
        ":sys_notifications_base_lib",
        ":sys_notifications_input_source_base_lib",
        ":sys_notifications_manager_base_lib",
        ":sys_notifications_lib_mock",
        "@gtest//:gtest_main",
    ],
    visibility = ["//v11:__subpackages__"],
)

cross_cc_library(
    name = "sys_notifications_lib",
    hdrs = [
        "notification_utils.h",
        "notification_utils_bridge.h",
    ],
    srcs = [
        "notification_utils.cc",
    ],
    macos_hdrs = [
        ":sys_notifications_lib_macos_hdrs",
    ],
    macos_srcs = [
        ":sys_notifications_lib_macos_srcs",
    ],
#    linux_srcs = [
#        ":sys_notifications_lib_linux_srcs",
#    ],
#    windows_srcs = [
#        ":sys_notifications_lib_windows_srcs",
#    ],
    deps = [
        "//v11/utils:v11_utils_lib",
        "//v11/larkin/environment/application:larkin_application_lib",
        ":sys_notifications_manager_base_lib",
        ":sys_notifications_input_source_base_lib",
        ":sys_notifications_base_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core System Notifications Lib Linux Platform Resources

filegroup(
    name = "sys_notifications_lib_linux_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib MacOS Platform Resources
filegroup(
    name = "sys_notifications_lib_macos_hdrs",
    srcs = [
        "workspace_input_source_mac.h",
        "system_notification_manager_mac.h",
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "sys_notifications_lib_macos_srcs",
    srcs = [
        "workspace_input_source_mac.mm",
        "system_notification_manager_mac.mm",
        "notification_utils_bridge_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core System Notifications Lib Windows Platform Resources

filegroup(
    name = "sys_notifications_lib_windows_srcs",
    srcs = [
    ],
    visibility = ["//visibility:private"],
)
