#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")

cross_cc_library(
    name = "sys_platform_lib",
    hdrs = [
        "get_platform.h",
        "platform.h",
        "platform_info.h",
    ],
    srcs = [
        "platform.cc",
    ],
    macos_srcs = [
        ":sys_platform_lib_macos_srcs",
    ],
    linux_srcs = [
        ":sys_platform_lib_linux_srcs",
    ],
    windows_srcs = [
        ":sys_platform_lib_windows_srcs",
    ],
    deps = [
        "//v11/utils:v11_utils_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core System Platform Lib Linux Platform Resources

filegroup(
    name = "sys_platform_lib_linux_srcs",
    srcs = [
        "get_platform_linux.cc",
    ],
    visibility = ["//visibility:private"],
)

# Core System Platform Lib MacOS Platform Resources

filegroup(
    name = "sys_platform_lib_macos_srcs",
    srcs = [
        "get_platform_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core System Platform Lib Windows Platform Resources

filegroup(
    name = "sys_platform_lib_windows_srcs",
    srcs = [
        "get_platform_windows.cc",
    ],
    visibility = ["//visibility:private"],
)
