#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:cross_platform.bzl", "cross_cc_library")
load("@rules_cc//cc:defs.bzl", "cc_test")


cross_cc_library(
    name = "sys_platform_lib",
    hdrs = [
        "platform.h",
        "platform_info.h",
    ],
    srcs = [
        "platform.cc",
    ],
    macos_hdrs = [
        "platform_mac.h",
    ],
    macos_srcs = [
        "platform_mac.mm",
    ],
    linux_hdrs = [
        "platform_linux.h",
    ],
    linux_srcs = [
        "platform_linux.cc",
    ],
    deps = [
        "@abseil_cpp//absl/strings:str_format",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sys_platform_lib_mock",
    hdrs = [
        "platform_mock.h",
    ],
    srcs = [
        "platform_mock.cc",
    ],
    deps = [
        ":sys_platform_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:private"],
)

cc_test(
    name = "sys_platform_lib_test",
    srcs = [
        "platform_test.cc",
    ],
    deps = [
        ":sys_platform_lib",
        ":sys_platform_lib_mock",
        "@gtest//:gtest_main",
    ],
    visibility = ["//v11:__subpackages__"],
)
