#  Copyright 2020 Northwestern Inclusive Technology Lab
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

load("//tools/bazel/rules:objcc.bzl", "cc_objc_library")

cc_objc_library(
    name = "sound_text2speech_lib",
    hdrs = [
        "text2speech_synthesizer.h",
        "text2speech_synthesizer_bridge.h",
        "voice.h",
        "voice_bridge.h",
        "voice_quality.h",
        "speech_request.h",
    ],
    srcs = [
        "text2speech_synthesizer.cc",
        "voice.cc"
    ] + select({
        "//tools/bazel/platforms:linux": [
            ":sound_text2speech_lib_linux_srcs",
        ],
        "//tools/bazel/platforms:macos": [
            ":sound_text2speech_lib_macos_srcs",
        ],
        "//tools/bazel/platforms:windows": [
            ":sound_text2speech_lib_windows_srcs",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//v11/utils:v11_utils_lib",
    ],
    strip_include_prefix = "//v11",
    visibility = ["//visibility:public"],
)

# Core Sound Text2Speech Lib Linux Platform Resources

filegroup(
    name = "sound_text2speech_lib_linux_srcs",
    srcs = [
        "text2speech_synthesizer_bridge_linux.cc",
        "voice_bridge_linux.cc",
    ],
    visibility = ["//visibility:private"],
)

# Core Sound Text2Speech Lib MacOS Platform Resources

filegroup(
    name = "sound_text2speech_lib_macos_srcs",
    srcs = [
        "text2speech_synthesizer_bridge_mac.mm",
        "voice_bridge_mac.mm",
    ],
    visibility = ["//visibility:private"],
)

# Core Sound Text2Speech Lib Windows Platform Resources

filegroup(
    name = "sound_text2speech_lib_windows_srcs",
    srcs = [
        "text2speech_synthesizer_bridge_windows.cc",
        "voice_bridge_mac.mm",
    ],
    visibility = ["//visibility:private"],
)
